more alignment fix

--- a/src/app/race-year/race-year.component.css
+++ b/src/app/race-year/race-year.component.css
@@ -10,6 +10,7 @@ th, td{
     position: fixed;
     bottom: 0;
     width: 100%;
+	height: 53px;
 	background-color:#343a40!important;
 }
 
